--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1 id="logo"><a href="index.html">Fashy's Website</a></h1>
+			<h1 id="logo"><a href="./">Fashy's Website</a></h1> <!-- index.html changed to ./ -->
 			<nav id="nav">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="project.html">Projects</a></li>
+					<li><a href="./">Home</a></li> <!-- index.html changed to ./ -->
+					<li><a href="./project.html">Projects</a></li> <!-- project.html changed to ./project -->
 					<!-- <li>
 						<a href="#">Blogs</a>
 						<ul>
