--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
 	<!-- favicon -->
-	<link rel="icon" type="image/x-icon" href="/images/lion1.png">
+	<link rel="icon" type="image/x-icon" href="/images/starfavi.png">
 	<!-- fontawesome -->
 	<script src="https://kit.fontawesome.com/8d4e596516.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -72,7 +72,7 @@
 				<header>
 					<h2>Fasiha Natasha</h2>
 					<p>Fell in love with journalism.<br />
-						Trying to solve world problems through integrated media journalism.</p>
+						A field that leads to progressive social change.</p>
 					<p align="left"> <img
 							src="https://komarev.com/ghpvc/?username=FasihaNatasha&label=Profile%20views&color=0e75b6&style=flat"
 							alt="Fashy" /> </p>
@@ -143,12 +143,12 @@
 
 		<!-- Three -->
 		<section id="three" class="spotlight style3 left">
-			<span class="image fit main bottom"><img src="images/banner6.png" alt="" /></span>
+			<span class="image fit main bottom"><img src="images/letourdelangkawi2023-transformed.jpeg" alt="" /></span>
 			<div class="content">
 				<header>
 					<h2>Le Tour de Langkawi · Seasonal</h2>
 					<p>
-						Previously, I am an event promoter for Le Tour de Langkawi, where I enganged with people of all ages and learned more on effective communication in teamwork. My responsibilities include planning the Event Marketing Strategy and maintaining the company's good image.
+						Previously, I am an event promoter for Le Tour de Langkawi, where I enganged with people of all ages and learned more on effective communication in teamwork. My responsibilities include Event Marketing Strategy planning and maintaining the company's good image.
 					</p>
 					<!-- <ul>
 						<li>Code the application in Kotlin language</li>
