--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 		<!-- One -->
 		<section id="one" class="spotlight style1 bottom">
-			<span class="image fit main"><img src="images/iium.png" alt="" /></span>
+			<span class="image fit main"><img src="images/letourdelangkawi2023-transformed.jpeg" alt="" /></span>
 			<div class="content">
 				<div class="container">
 					<div class="row">
@@ -146,7 +146,7 @@
 			<span class="image fit main bottom"><img src="images/letourdelangkawi2023-transformed.jpeg" alt="" /></span>
 			<div class="content">
 				<header>
-					<h2>Le Tour de Langkawi · Seasonal</h2>
+					<h2>Women Representative</h2>
 					<p>
 						Previously, I am an event promoter for Le Tour de Langkawi, where I enganged with people of all ages and learned more on effective communication in teamwork. My responsibilities include Event Marketing Strategy planning and maintaining the company's good image.
 					</p>
@@ -219,47 +219,47 @@
 		<!-- Timeline -->
 		<section id="four" class="wrapper style1 special fade-up">
 			<header class="major">
-				<h2>2023 Recap!</h2>
+				<h2>2024-2023 Recap!</h2>
 			</header>
 			<div class="timeline">
 				<div class="timecontainer left-timecontainer">
-					<img src="images/uia.png">
+					<img src="images/letour.jpeg">
 					<div class="timetext-box">
-						<h2>January 2023</h2>
-						<small>Program Pemantapan Bahasa, Sesi 2022/2023</small>
-							<p>Participated in a university-level competition, 
-								pitching ideas related to my field of study. 
+						<h2>October 2024</h2>
+						<small>Le Tour De Lengkawi 2024</small>
+							<p>Became a part of Le Tour De Lengkawi 2024, 
+								engaging with cyclists and staff. 
 								I proposed the idea of using Machine Learning to locate the exact position of public transport and available car parks through camera technology. 
 								This technology can help optimize public transport usage and reduce traffic congestion at IIUM Gombak. I placed 4th among the 9 participants.
 						</p>
 						<div class="image-container">
-							<img src="images/jan.jpg" alt="Jan Event" class="timeline-image">
+							<img src="images/lefull.jpeg" alt="Jan Event" class="timeline-image">
 						</div>
 						<span class="left-timecontainer-arrow"></span>
 					</div>
 				</div>
 				<div class="timecontainer right-timecontainer">
-					<img src="images/kpmg.png">
+					<img src="images/iiumrep.jpeg">
 					<div class="timetext-box">
-						<h2>March 2023</h2>
-						<small>Attracting Top Talent: Leveraging LinkedIn For Recruitment Success</small>
-						<p>As a KPMG Ambassador in 2023, 
+						<h2>July 2024</h2>
+						<small>Women Representative</small>
+						<p>As a Women Representative in 2024, 
 							my team and I conducted a virtual event targeting students from various backgrounds, 
 							focusing on how to craft their resumes and LinkedIn profiles to attract recruiters. 
 							The panelist, Miss Liyana Annuar, a career advisor at KPMG Malaysia, shared her insights on how to stand out and make profiles more appealing to recruiters. 
 							The event was attended by over 100 students.
 						</p>
 						<div class="image-container">
-							<img src="images/mac.jpg" alt="Jan Event" class="timeline-image">
+							<img src="images/repwomen.jpg" alt="Jan Event" class="timeline-image">
 						</div>
 						<span class="right-timecontainer-arrow"></span>
 					</div>
 				</div>
 				<div class="timecontainer left-timecontainer">
-					<img src="images/kpmg.png">
+					<img src="images/ipr.jpeg">
 					<div class="timetext-box">
-						<h2>Jun 2023</h2>
-						<small>Strive with KPMG 2.0: Introduction to Indirect Tax and Digital Audit</small>
+						<h2>Jan 2024</h2>
+						<small>IPRMSA 2024</small>
 						<p>Conducted a physical event in IIUM with student from economics to give exposure to students
 							about Indirect Tax and
 							Digital Audit. As a KPMG Ambassador 2023, my team and I invited two speakers from KPMG
@@ -271,16 +271,16 @@
 							to students.
 						</p>
 						<div class="image-container">
-							<img src="images/jun.jpg" alt="Jun Event" class="timeline-image">
+							<img src="images/iprmsa.jpeg" alt="Jun Event" class="timeline-image">
 						</div>
 						<span class="left-timecontainer-arrow"></span>
 					</div>
 				</div>
 				<div class="timecontainer right-timecontainer">
-					<img src="images/uia.png">
+					<img src="images/letour.jpeg">
 					<div class="timetext-box">
-						<h2>July 2023</h2>
-						<small>Feast and Fun: Outreach for Underprivillaged Students</small>
+						<h2>Aug 2023</h2>
+						<small>Le Tour De Lengkawi 2023</small>
 						<p>Volunteered in a physical event and visited Dar Asnaf, Gombak, Selangor, an organization
 							that aims to support and help orphans and underprivileged children. We bought some foods and some
 							presents in terms of tupperwares and plastic bottles using the money that we collected from
@@ -289,16 +289,16 @@
 							media team for this event to capture the moments and post it during exhibition day.
 						</p>
 						<div class="image-container">
-							<img src="images/july.jpg" alt="Jun Event" class="timeline-image">
+							<img src="images/lefull.jpeg" alt="Jun Event" class="timeline-image">
 						</div>
 						<span class="right-timecontainer-arrow"></span>
 					</div>
 				</div>
 				<div class="timecontainer left-timecontainer">
-					<img src="images/mdit.png">
+					<img src="images/sinarlogo.jpeg">
 					<div class="timetext-box">
-						<h2>September 2023</h2>
-						<small>Malaysia Data Innovation Talent 2023</small>
+						<h2>July 2023</h2>
+						<small>Social Media Coordinator</small>
 						<p>Participated in national level datathon competition for the first time in my life. Was a very 
 							entertaining and clueless at the same time on what to do and to expect. Explored new tool
 							which SAS visual analytics to produce a dashboards during the competition. Our team was placed
@@ -306,7 +306,7 @@
 							next year.
 						</p>
 						<div class="image-container">
-							<img src="images/sept.jpg" alt="Jun Event" class="timeline-image">
+							<img src="images/sinarpagi.jpg" alt="Jun Event" class="timeline-image">
 						</div>
 						<span class="left-timecontainer-arrow"></span>
 					</div>
